index.html updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurav Sonar - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
 
@@ -36,8 +36,10 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project Title</h3>
-            <p>Description of the project.</p>
+            <h3>Luminary - Donation Website</h3>
+            <p>A secure and interactive donation platform built using HTML, CSS, JavaScript, PHP, and SQL. Features
+                include user authentication, dynamic donation tracking, and performance optimizations.</p>
+            <a href="https://github.com/gaurav4445/Luminary" target="_blank">View on GitHub</a>
         </div>
     </section>
 
