--- a/index.html
+++ b/index.html
@@ -1,61 +1,58 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaurav Sonar - Portfolio</title>
+    <title>Gaurav Sonar | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
 </head>
 
 <body>
     <header>
+        <h1>Gaurav Sonar</h1>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="resume.pdf" target="_blank">Resume</a></li>
-            </ul>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
-    <section id="home">
-        <h1>Hi, I'm Gaurav Sonar</h1>
-        <p>Web Developer | Programmer | Tech Enthusiast</p>
-    </section>
-
-    <section id="about">
+    <section id="about" class="section">
         <h2>About Me</h2>
-        <p>I'm an MCA student passionate about web development and software engineering.</p>
+        <p>I'm a passionate developer with expertise in web development and software engineering.</p>
+        <img src="profile.jpg" alt="Gaurav Sonar">
+        <p>Proficient in Java, C++, JavaScript, and more.</p>
     </section>
 
-    <section id="projects">
+    <section id="projects" class="section">
         <h2>Projects</h2>
-        <div class="project">
-            <h3>Luminary - Donation Website</h3>
-            <p>A secure and interactive donation platform built using HTML, CSS, JavaScript, PHP, and SQL. Features
-                include user authentication, dynamic donation tracking, and performance optimizations.</p>
-            <a href="https://github.com/gaurav4445/Luminary" target="_blank">View on GitHub</a>
+        <div class="projects">
+            <div class="project-card">
+                <h3>Luminary Donation Website</h3>
+                <p>A secure platform for managing donations.</p>
+                <a href="https://github.com/gaurav4445/Luminary" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card" id="additional-projects">
+                <p>More projects coming soon...</p>
+            </div>
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="section">
         <h2>Contact Me</h2>
         <form id="contact-form">
-            <input type="text" id="name" placeholder="Your Name" required>
-            <input type="email" id="email" placeholder="Your Email" required>
-            <textarea id="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
         </form>
     </section>
 
     <footer>
         <p>&copy; 2025 Gaurav Sonar. All Rights Reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
